refactored services und tests