@@ -105,7 +105,7 @@ class EventWorkerServiceTest {
         ArgumentCaptor<Order> orderCaptor = ArgumentCaptor.forClass(Order.class);
         verify(databaseService, times(2)).saveOrder(orderCaptor.capture());
         
-        Order firstSavedOrder = orderCaptor.getAllValues().get(0);
+        Order firstSavedOrder = orderCaptor.getAllValues().getFirst();
         assertThat(firstSavedOrder.getStatus()).isEqualTo(OrderStatus.PENDING);
 
         // Verify assignment and cache invalidation
